# studyos

./: .gitignore  CMakeLists.txt
src/: main.cpp  models.hpp
src/gui/: AppState.hpp  MainWindow.cpp  MainWindow.hpp  ScheduleWidget.cpp  ScheduleWidget.hpp  StatsWidget.cpp  StatsWidget.hpp  TasksWidget.cpp  TasksWidget.hpp  TimerWidget.cpp  TimerWidget.hpp
src/gui/dialogs/: BusyBlockDialog.cpp  BusyBlockDialog.hpp  PreferenceDialog.cpp  PreferenceDialog.hpp
src/gui/models/: ScheduleTableModel.cpp  ScheduleTableModel.hpp
src/scheduler/: Scheduler.cpp  Scheduler.hpp
src/services/: BusyBlockService.cpp  BusyBlockService.hpp  PreferenceService.cpp  PreferenceService.hpp  SessionService.cpp  SessionService.hpp  TaskService.cpp  TaskService.hpp
src/storage/: Database.cpp  Database.hpp
src/ui/: App.cpp  App.hpp  StatsView.cpp  StatsView.hpp  TasksView.cpp  TasksView.hpp  TimerView.cpp  TimerView.hpp
